# fastdelegate

./: .gitignore  CMakeLists.txt  Delegate.h  Demo.cpp  HexDump.h  make.sh  readme.txt
demo/: CMakeLists.txt  Demo2.cpp
test/: CMakeLists.txt  DelegateTests.cpp  SizeofTest.h
